--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,9 +1,21 @@
+.container_dark {
+    border: 15px solid;
+    border-color: black;
+    border-radius: 5px;
+    border-width: 2px;
+}
+
 .fixed_top {
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
     z-index: 1030;
+}
+
+.img_dark {
+    height: 50px;
+    width: 50px;
 }
 
 .item_links {
@@ -22,7 +34,6 @@
 .lista_preselect {
     display: flex;
     flex-wrap: wrap;
-    align-items: start;
     align-items: flex-end;
     list-style: none;
 }
@@ -48,6 +59,13 @@
     padding-bottom: 35px;
 }
 
+.nav_img_profile {
+    height: 95px;
+    width: 85px;
+    padding-bottom: 45px;
+    padding-right: 25px;
+}
+
 .nav_links {
     margin-bottom: 25px;
 }
@@ -58,6 +76,27 @@
     font-size: 35px;
     text-decoration: none;
     font-family: 'Red Hat Mono';
+}
+
+.preselect {
+    margin-right: 15px;
+}
+
+.preselect_links {
+    padding-right: 30px;
+    padding-bottom: 70px;
+}
+
+.select_moneda {
+    padding-left: 15px;
+}
+
+.text_moneda {
+    position: absolute;
+    top: 40px;
+    font-family: 'Red Hat Mono';
+    font-size: large;
+    text-decoration: underline;
 }
 
 .underline_links {
