--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -47,7 +47,7 @@ IDS
 #tabla_jugadores {
     position: absolute;
     top: 900px;
-    left: 50px;
+    left: 150px;
 }
 
 
@@ -306,7 +306,7 @@ CLASES
 .subtitulo_jugadores {
     position: absolute;
     top: 800px;
-    left: 50px;
+    left: 150px;
     font-size: 25px;
     text-decoration: underline;
 }
@@ -458,6 +458,18 @@ ESTILOS MODO CLARO
     position: relative;
     left: -8px;
     bottom: -8px;
+    border-top: 10px solid;
+    border-color: #4E944F;
+}
+
+.footer_light_equipo {
+    background-color: #DDDDDD;
+    padding-top: 20px;
+    width: 100%;
+    padding-bottom: 10px;
+    position: relative;
+    bottom: -2655px;
+    left: -8px;
     border-top: 10px solid;
     border-color: #4E944F;
 }
