--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,7 +1,6 @@
 body {
     width: max-content;
     overflow-x: hidden;
-    font-family: 'Red Hat Mono';
 }
 
 
@@ -48,6 +47,17 @@ IDS
     position: absolute;
     top: 900px;
     left: 150px;
+}
+
+#tabla_pos {
+    width: 90%;
+    margin-left: 85px;
+}
+
+#graficos_posiciones {
+    position: relative;
+    top: 250px;
+    align-items: center;
 }
 
 
@@ -106,6 +116,14 @@ CLASES
     width: 50%;
     height: 100px;
     text-align: center;
+}
+
+.col_titulo {
+    width: 70%;
+}
+
+.col_opciones {
+    width: 30%;
 }
 
 .container_dark {
@@ -299,8 +317,9 @@ CLASES
     width: 100%;
 }
 
-.select_moneda {
-    padding-left: 15px;
+.selector_opciones {
+    width: 400px;
+    height: 50px;
 }
 
 .subtitulo_jugadores {
@@ -314,6 +333,20 @@ CLASES
 .subtitulo_plantilla {
     font-size: 25px;
     text-decoration: underline;
+}
+
+.tabla_tit_opc {
+    align-items: center;
+    width: 90%;
+    margin-left: 85px;
+}
+
+.titulo_competicion {
+    font-family: 'Joan', serif;
+    font-size: 35px;
+    font-weight: bolder;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .titulo_disciplinas {
@@ -362,6 +395,11 @@ CLASES
     font-style: italic;
 }
 
+.titulo_posiciones {
+    position: relative;
+    top: 200px;
+}
+
 .text_moneda {
     position: absolute;
     top: 40px;
@@ -391,25 +429,32 @@ table#tabla_jugadores thead tr th {
     background: #c5c5c5;
 }
 
-table thead tr th.fila_jugadores_s {
+table#tabla_pos thead tr th {
+    background: #c5c5c5;
+}
+
+table thead tr th.fila_s {
     padding: 5px 5px;
     text-align: center;
     border: 1px solid rgb(14, 14, 14);
     width: 5px;
+    text-align: start;
 }
 
-table thead tr th.fila_jugadores_m {
+table thead tr th.fila_m {
     padding: 10px 10px;
     text-align: center;
     border: 1px solid rgb(14, 14, 14);
     width: 150px;
+    text-align: start;
 }
 
-table thead tr th.fila_jugadores_l {
+table thead tr th.fila_l {
     padding: 10px 10px;
     text-align: center;
     border: 1px solid rgb(14, 14, 14);
     width: 350px;
+    text-align: start;
 }
 
 table .fila_ct_pos {
