--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -3,6 +3,10 @@ body {
     overflow-x: hidden;
 }
 
+table {
+    border-collapse: collapse;
+}
+
 
 /*
 IDS
@@ -215,6 +219,31 @@ CLASES
     width: 75px;
 }
 
+.imagen_posiciones {
+    width: 20px;
+    height: 20px;
+    padding-left: 10px;
+}
+
+.links_no_deco {
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Joan', serif;
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 5px;
+    color: black;
+}
+
+.links_no_deco:hover {
+    text-decoration: underline;
+}
+
+.links_no_deco:visited {
+    text-decoration: none;
+    color: black;
+}
+
 .lista_links {
     display: flex;
     flex-wrap: wrap;
@@ -280,6 +309,11 @@ CLASES
 
 .nav_text:hover {
     color: #A2D5AB;
+}
+
+.no_border_escudo {
+    border-right: none;
+    text-align: start;
 }
 
 .nombreRedes {
@@ -438,7 +472,6 @@ table thead tr th.fila_s {
     text-align: center;
     border: 1px solid rgb(14, 14, 14);
     width: 5px;
-    text-align: start;
 }
 
 table thead tr th.fila_m {
@@ -446,10 +479,16 @@ table thead tr th.fila_m {
     text-align: center;
     border: 1px solid rgb(14, 14, 14);
     width: 150px;
-    text-align: start;
 }
 
 table thead tr th.fila_l {
+    padding: 10px 10px;
+    text-align: center;
+    border: 1px solid rgb(14, 14, 14);
+    width: 350px;
+}
+
+table thead tr th.fila_l_start {
     padding: 10px 10px;
     text-align: center;
     border: 1px solid rgb(14, 14, 14);
@@ -514,6 +553,18 @@ ESTILOS MODO CLARO
     padding-bottom: 10px;
     position: relative;
     bottom: -2655px;
+    left: -8px;
+    border-top: 10px solid;
+    border-color: #4E944F;
+}
+
+.footer_light_pos {
+    background-color: #DDDDDD;
+    padding-top: 20px;
+    width: 100%;
+    padding-bottom: 10px;
+    position: relative;
+    bottom: -500px;
     left: -8px;
     border-top: 10px solid;
     border-color: #4E944F;
