--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -122,12 +122,35 @@ CLASES
     text-align: center;
 }
 
+.col_posiciones {
+    padding-left: 75px;
+    padding-right: 75px;
+    margin: 25px;
+    width: 50%;
+    height: 100px;
+    text-align: center;
+}
+
 .col_titulo {
     width: 70%;
 }
 
 .col_opciones {
     width: 30%;
+}
+
+.container_titulos {
+    padding-top: 25px;
+    margin-top: 50px;
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+}
+
+.container_partidos {
+    justify-content: space-around;
+    display: flex;
+    align-items: center;
 }
 
 .container_dark {
@@ -249,6 +272,21 @@ CLASES
     flex-wrap: wrap;
     align-items: start;
     align-items: flex-end;
+    list-style: none;
+}
+
+.lista_partidos_titulos {
+    text-align: center;
+    list-style: none;
+}
+
+.lista_partidos {
+    width: 400px;
+    padding-left: 0;
+    padding-right: 100px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     list-style: none;
 }
 
@@ -423,6 +461,15 @@ CLASES
     font-style: italic;
 }
 
+.titulo_texto_posiciones {
+    font-family: 'Joan', serif;
+    text-decoration: underline;
+    padding-bottom: 15px;
+    font-weight: bold;
+    font-size: 50px;
+    font-style: italic;
+}
+
 .titulo_plantilla {
     font-size: 50px;
     font-family: 'Red Hat Mono';
@@ -520,6 +567,13 @@ table tbody tr td {
     width: 50px;
 }
 
+.lista_partidos li {
+    width: 450px;
+    padding-bottom: 10px;
+    font-family: 'Joan', serif;
+    font-size: 35px;
+}
+
 
 /*
 ESTILOS MODO CLARO
@@ -564,7 +618,7 @@ ESTILOS MODO CLARO
     width: 100%;
     padding-bottom: 10px;
     position: relative;
-    bottom: -500px;
+    bottom: -300px;
     left: -8px;
     border-top: 10px solid;
     border-color: #4E944F;
