--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -25,7 +25,7 @@ IDS
 }
 
 #noticias {
-    margin-top: 12rem;
+    margin-top: 7.5rem;
 }
 
 #nosotros {
@@ -69,6 +69,14 @@ IDS
     position: relative;
     top: 250px;
     align-items: center;
+}
+
+#noticia_1_texto {
+    position: relative;
+    top: 7.5;
+    left: 5%;
+    width: 90%;
+    text-align: center;
 }
 
 
@@ -134,6 +142,11 @@ CLASES
 }
 
 .botones_usuario input:hover {
+    box-shadow: 5px 5px 15px black;
+    background-color: #D6D5A8;
+}
+
+.boton_reiniciar input:hover {
     box-shadow: 5px 5px 15px black;
     background-color: #D6D5A8;
 }
@@ -209,6 +222,27 @@ CLASES
     padding-left: 2.5rem;
 }
 
+.container_usuario {
+    border: 2px solid #06283D;
+    border-radius: 5px;
+    position: absolute;
+    top: 300px;
+    margin-left: 75px;
+    height: 350px;
+    width: 90%;
+    padding-top: 2.5rem;
+    padding-left: 2.5rem;
+    padding-bottom: 40px;
+}
+
+.container_usuario * {
+    height: 25px;
+    margin-bottom: 25px;
+    margin-left: 15px;
+    font-family: 'Joan', serif;
+    font-size: 25px;
+}
+
 .dorsal_arquero {
     background-color: #2F8F9D;
 }
@@ -238,7 +272,7 @@ CLASES
 }
 
 .formulario_usuario {
-    margin-left: 50px;
+    margin-left: 75px;
     height: 350px;
     width: 90%;
     vertical-align: middle;
@@ -491,6 +525,11 @@ CLASES
     text-decoration: underline;
 }
 
+.span_perfil {
+    text-decoration: underline;
+    padding-right: 10px;
+}
+
 .tabla_tit_opc {
     align-items: center;
     width: 90%;
@@ -601,6 +640,12 @@ CLASES
 ESTILOS COMBINADOS
 */
 
+.container_usuario #boton_reiniciar {
+    position: absolute;
+    top: 350px;
+    right: 10px;
+}
+
 table thead tr th {
     background: #c5c5c5;
 }
@@ -684,6 +729,24 @@ table tbody tr td {
     color: #15133C;
 }
 
+#noticia_1_texto .img_noticia_reserva {}
+
+#noticia_1_texto h1 {
+    font-family: 'Joan', serif;
+    font-size: 50px;
+    font-weight: lighter;
+    padding-bottom: 20px;
+    border-bottom: 0.5px solid grey;
+}
+
+#noticia_1_texto h4 {
+    font-family: 'Joan', serif;
+    font-size: 20px;
+    font-weight: lighter;
+    margin-top: 10px;
+    padding-bottom: 20px;
+}
+
 
 /*
 ESTILOS MODO CLARO
@@ -730,6 +793,18 @@ ESTILOS MODO CLARO
     position: relative;
     bottom: -300px;
     left: -8px;
+    border-top: 10px solid;
+    border-color: #4E944F;
+}
+
+.footer_light_perfil {
+    background-color: #DDDDDD;
+    padding-top: 20px;
+    width: 100%;
+    padding-bottom: 10px;
+    position: absolute;
+    bottom: -300px;
+    left: 0px;
     border-top: 10px solid;
     border-color: #4E944F;
 }
